# ahaHLS

./: .gitignore  .travis.yml  CMakeLists.txt  FwdHistRAM.v  HistRAM.v  ImgRAM.v  LICENSE  RAM.v  RAM2.v  RAM3.v  RAM_1_1.v  README.md  adder.v  axi_ram.v  axi_rb.v  axi_read.v  axi_wb.v  axi_write.v  axil_ram.v  b_fifo.v  builtins.v  channel_reduce_4.v  cmp_gt_tb.v  complex_num_tb.v  compound_fifo_tb.v  concat_rtl.v  constrained_pipe.v  default.nix  delay.v  dff_3_pipe.v  dynamic_arch_sram_class_tb.v  dynamic_arch_tb.v  eth_axis_tx.v  fifo.v  fifo_3.v  fifo_in_loop_tb.v  fifo_read.v  fifo_read_delay_tb.v  fifo_user_tb.v  fifo_write.v  (+40 more)
experiments/: adder.v  axi_iclass.cpp  contrived.cpp  custom_if.cpp  demangle.cpp  eth_axi_tx.cpp  fadd.cpp  flowlets.cpp  flowlets_intuitive.c  generate_bindings.cpp  hist_rams.cpp  int_add.cpp  median_filter.cpp  packet_example.cpp  parser.cpp  primitive_assign.cpp  ram_iclass.cpp  reduce_4.c  reduce_4.h  register_iclass.cpp  run_verilator.sh  synthesize_interface_functions.cpp  synthesize_reduce_4.cpp  test_reduce.c  timing_agnostic_fpu.c  use_fpu.cpp
hlslib/: fifo.h  hls_macros.h  ram.h
src/: ahaHLS.cpp  algorithm.h  binding.cpp  binding.h  coreir_backend.cpp  coreir_backend.h  directed_graph.h  expression.cpp  expression.h  fifos.cpp  fifos.h  halide_arch.cpp  halide_arch.h  llvm_codegen.cpp  llvm_codegen.h  microarchitecture.cpp  microarchitecture.h  parser.cpp  parser.h  rams.cpp  rams.h  scheduling.cpp  scheduling.h  survey.cpp  test_utils.cpp  test_utils.h  utils.cpp  utils.h  verilog_backend.cpp  verilog_backend.h
test/: coreir_backend_tests.cpp  dependence.cpp  halide_stencils.cpp  outer_loop_pipelines.cpp  parser.cpp  scheduling.cpp  synthesis.cpp  test_utils.cpp  test_utils.h
test/ll_files/: ac_channel.h  add_10_channel.cpp  add_10_template.cpp  add_10_template.h  add_10_template_test.cpp  add_reduce_15.c  axi_multi_transfer.cpp  blur_lb.c  blur_lb.cpp  blur_no_lb.c  blur_no_lb.cpp  brighter.ll  builtin_fifo_32_impl.c  cascade.cpp  cascade_halide_first_lb.cpp  cascade_halide_ram_set_loop.cpp  cascade_halide_source.cpp  channel_add.cpp  channel_reduce_4.cpp  cmp_gt.c  cmp_gt.cpp  complex_num.cpp  compound_fifo.cpp  conv_2_1_manually_optimized.cpp  conv_2_1_source.cpp  conv_3_3.cpp  count_packets.cpp  dh_crossbar.ll  fifo.h  fp_conv_3_3.cpp  gen_classes.h  halide_cascade.ll  halide_stencil_get_01.cpp  harris.cpp  hist_forwarded.cpp  hist_simple.cpp  histogram.cpp  hls_macros.h  if_else.c  if_else.cpp  (+43 more)
